--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,9 @@ html.dark ::selection{
     color: #fff;
     background: #1c1c1ccc;
 }
+
+@media (width <= 768px){
+    ::-webkit-scrollbar{
+        width: 1px;
+    }
+}
