--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-/* Plus Jakarta Sans & Space Mono */
+/* Plus Jakarta Sans, DM Mono  & Space Mono */
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 *,
